# FastApi_sftp_connector

./: .env.example  .gitignore  README.md  add_sftp.py  create_files_script.sh  pyproject.toml
alembic/: env.py
alembic/versions/: a09542546e43_initial.py
app/: __init__.py  celery_app.py  config.py  models.py  periodic.py  sftp_utils.py  tasks.py
