[tool.poetry]
name = "fastapi-sftp-connector"
version = "0.1.0"
description = "SFTP to MinIO file importer with AMQP notifications"
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.9"
celery = { extras = ["redis"], version = "^5.3.6" }
sqlalchemy = "^2.0.29"
paramiko = "^3.4.0"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.1"
fastapi = "^0.110.0"
uvicorn = { version = "^0.29.0", optional = true }
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"